<resources>
    <string name="language_code">fi</string>
    <string name="logo">Logo</string>
    <string name="username">Sähköposti</string>
    <string name="password">Salasana</string>
    <string name="login">Kirjaudu sisään</string>
    <string name="login_tab_title">Kirjaudu</string>
    <string name="register_tab_title">Luo tili</string>
    <string name="password_forgotten">Unohtuiko salasana?</string>
    <string name="send_password_reset_title">Unohditko salasanasi?</string>
    <string name="send_password_reset_message">Syötä kenttään sähköpostiosoite, jota käytettiin tilin rekisteröinnissä.</string>
    <string name="send_password_reset_action">Lähetä palautuslinkki</string>
    <string name="password_reset_sent_message">Olemme lähettäneet ohjeet salasanan palauttamiseen annettuun sähkö\u00ADposti\u00ADosoitteeseen. Tarkista roska\u00ADposti\u00ADlaatikkosi, jos sähkö\u00ADposti ei saavu muutaman minuutin kuluessa.</string>
    <string name="authentication_link_sent_title">Pyyntö lähetetty</string>
    <string name="authentication_link_sent_back_to_login">Takaisin kirjautumiseen</string>
    <string name="login_failed">Kirjautuminen epäonnistui</string>
    <string name="login_connect_failed">Palvelimeen ei saatu yhteyttä. Ole hyvä ja yritä myöhemmin uudelleen.</string>
    <string name="login_incorrect_credentials">Väärä käyttäjänimi tai salasana. Ole hyvä ja yritä uudelleen.</string>
    <string name="login_outdated_version">Ohjelmaversio on vanhentunut. Päivitä ohjelma uuteen versioon jatkaaksesi käyttöä.</string>
    <string name="send_registration_link_title">Tilin luonti</string>
    <string name="send_registration_link_message">Rekisteröityäksesi oma.riista.fi-palveluun tarvitset toimivan, henkilökohtaisen sähköpostiosoitteen, johon lähetämme linkin tunnuksen luomista varten. Osana tunnuksen luomista tunnistaudut pankkitunnuksillasi Suomi.fi-tunnistuspalvelussa.</string>
    <string name="send_registration_link_action">Aloita rekisteröityminen</string>
    <string name="registration_link_sent_message">Olemme lähettäneet rekisteröitymisohjeet annettuun sähkö\u00ADposti\u00ADosoitteeseen. Tarkista roska\u00ADposti\u00ADlaatikkosi, jos sähkö\u00ADposti ei saavu muutaman minuutin kuluessa.</string>
    <string name="login_username_changed">Sähköposti vaihtunut?</string>
    <string name="change_username_title">Vaihda sähköposti\u00ADosoitetta</string>
    <string name="change_username_message">Voit vaihtaa Oma riista -tunnuksena käyttämäsi sähköposti\u00ADosoitteen rekisteröitymällä palveluun uudelleen.\n\nKaikki palveluun syöttämäsi tiedot säilyvät uudelleenrekisteröinnissä.</string>
    <string name="change_username_action">Siirry rekisteröitymään</string>
    <string name="add">Lisää</string>
    <string name="edit">Muokkaa</string>
    <string name="try_again">Yritä uudelleen</string>
    <string name="attention">Huomio</string>
    <string name="error_date_not_allowed">Päiväys ei ole sallittu</string>
    <string name="error_datetime_in_future">Päivämäärä ei saa olla tulevaisuudessa</string>
    <string name="no_web_browser">Selainta ei löytynyt</string>
    <string name="operation_failed">Toiminto epäonnistui</string>
    <string name="menu_front_page">Etusivu</string>
    <string name="menu_game_log">Riistaloki</string>
    <string name="menu_map">Kartta</string>
    <string name="menu_announcements">Viestit</string>
    <string name="menu_more">Lisää</string>
    <string name="more_my_details">Omat tiedot</string>
    <string name="more_settings">Asetukset</string>
    <string name="more_shooting_test_list">Ampumakokeet</string>
    <string name="more_hunting_group_leader">@string/group_hunting_main_page_title</string>
    <string name="more_hunting_control">@string/hunting_control_main_page_title</string>
    <string name="more_event_search">Tapahtumahaku</string>
    <string name="more_contact_details">Yhteystiedot</string>
    <string name="more_show_magazine">Lue viimeisin Metsästäjä-lehti</string>
    <string name="more_view_hunting_seasons">Metsästysajat</string>
    <string name="more_gallery">Galleria</string>
    <string name="more_about">Tietoja</string>
    <string name="logout">Kirjaudu ulos</string>
    <string name="menu_add_item">Lisää</string>
    <string name="title_front_page">Etusivu</string>
    <string name="title_game_log">Riistaloki</string>
    <string name="title_gallery">Galleria</string>
    <string name="title_my_details">Omat tiedot</string>
    <string name="title_announcements">Viestit</string>
    <string name="title_settings">Asetukset</string>
    <string name="title_contact_details">Yhteystiedot</string>
    <string name="title_shooting_test_list">Ampumakokeet</string>
    <string name="season">Metsästyskausi %1$s</string>
    <string name="season_srva">Kalenterivuosi %1$s</string>
    <string name="harvest_total">%1$s saalista</string>
    <string name="observation_total">%1$s havaintoa</string>
    <string name="srva_total">%1$s tapahtumaa</string>
    <string name="loggame">Kirjaa saalis</string>
    <string name="harvest">Saalis</string>
    <string name="observation">Havainto</string>
    <string name="srva">SRVA</string>
    <string name="poi">Paikkapisteet</string>
    <string name="poi_list">Lista</string>
    <string name="poi_list_title">Paikkapisteet</string>
    <string name="poi_location_group_type_sighting_place">Passi</string>
    <string name="poi_location_group_type_mineral_lick">Nuolukivi</string>
    <string name="poi_location_group_type_feeding_place">Ruokintapaikka</string>
    <string name="poi_location_group_type_other">Muu</string>
    <string name="poi_filter_type_all">Kaikki</string>
    <string name="poi_filter_type_sighting_place">@string/poi_location_group_type_sighting_place</string>
    <string name="poi_filter_type_mineral_lick">@string/poi_location_group_type_mineral_lick</string>
    <string name="poi_filter_type_feeding_place">@string/poi_location_group_type_feeding_place</string>
    <string name="poi_filter_type_other">@string/poi_location_group_type_other</string>
    <string name="poi_select_external_id">Valitse Oma Riista -alue kartan asetuksista nähdäksesi alueeseen liitetyt paikkapisteet.</string>
    <string name="poi_no_pois">Ei paikkapisteitä</string>
    <string name="poi_center_and_return_to_map">Keskitä ja palaa kartalle</string>
    <string name="previous">Edellinen</string>
    <string name="next">Seuraava</string>
    <string name="amount_format">%1$d&#160;kpl</string>
    <string name="minutes_format">%1$d&#160;min</string>
    <string name="centimeters_format">%1$d&#160;cm</string>
    <string name="hours_and_minutes">%1$s&#160;%2$s</string>
    <string name="double_format_zero_decimals">%.0f</string>
    <string name="double_format_one_decimal">%.1f</string>
    <string name="date_format_short">%1$d.%2$d.%3$d</string>
    <string-array name="months">
        <item>Tammikuu</item>
        <item>Helmikuu</item>
        <item>Maaliskuu</item>
        <item>Huhtikuu</item>
        <item>Toukokuu</item>
        <item>Kesäkuu</item>
        <item>Heinäkuu</item>
        <item>Elokuu</item>
        <item>Syyskuu</item>
        <item>Lokakuu</item>
        <item>Marraskuu</item>
        <item>Joulukuu</item>
    </string-array>
    <string name="home_new_harvest">Uusi saalis</string>
    <string name="home_new_observation">Uusi havainto</string>
    <string name="home_new_srva">SRVA-tapahtuma</string>
    <string name="home_hunting_license">Metsästys-\nkortti</string>
    <string name="home_shooting_tests">Ampumakoe-\nsuoritukset</string>
    <string name="language">Kieli</string>
    <string name="language_prompt">Valitse kieli</string>
    <string name="map_settings">Kartan asetukset</string>
    <string name="Finnish">Suomi</string>
    <string name="Swedish">Svenska</string>
    <string name="English">English</string>
    <string name="settings_privacy_statement">Tietosuojaseloste</string>
    <string name="settings_terms_of_service">Käyttöehdot</string>
    <string name="settings_accessibility">Saavutettavuusseloste</string>
    <string name="settings_third_party_libraries">Kolmannen osapuolen kirjastot</string>
    <string name="settings_unregister_user_account">@string/unregister_account_title</string>
    <string name="feedback">Palaute</string>
    <string name="sendemail">Lähetä sähköpostia</string>
    <string name="version">Versio</string>
    <string name="unknown">Ei tiedossa</string>
    <string name="support_email_title">Palautetta Oma riista -mobiilisovelluksesta</string>
    <string name="support_email_template">\n\nNimi: %1$s\nMetsästäjänumero: %2$s\nSovellusversio: %3$s\nPuhelinmalli: %4$s\nAndroid-versio: %5$s</string>
    <string name="license_email_title">Metsästyskortti</string>
    <string name="license_email_template">\n\nNimi: %1$s\nMetsästäjänumero: %2$s</string>
    <string name="customer_service">Oma riista neuvonta</string>
    <string name="customer_service_times">Palvelemme arkisin klo 12&#8211;16</string>
    <string name="customer_service_phone_number">029 431 2111</string>
    <string name="support_and_feedback">Tuki ja palaute</string>
    <string name="email">Sähköposti</string>
    <string name="customer_service_email_address">oma@riista.fi</string>
    <string name="contact_details_hunter_card_title">Metsästyskorttiasiat</string>
    <string name="contact_details_license_tel_title">Puh.</string>
    <string name="cancel">Peruuta</string>
    <string name="ok">OK</string>
    <string name="settings_map_type_google">Google</string>
    <string name="map_type_select">Karttatyyppi</string>
    <string name="map_type_topographic">Maasto</string>
    <string name="map_type_background">Tausta</string>
    <string name="map_type_aerial">Orto</string>
    <string name="map_title">Kartta</string>
    <string name="map_add_area">Lisää alue</string>
    <string name="map_settings_show_location">Näytä oma sijainti</string>
    <string name="map_settings_invert_colors">Käännä seurojen aluekarttojen värit</string>
    <string name="map_settings_valtionmaat">Valtionmaat</string>
    <string name="map_settings_rhy_rajat">RHY-rajat</string>
    <string name="map_settings_game_triangles">Riistakolmiot</string>
    <string name="map_settings_offline_map_settings">Offline-kartat</string>
    <string name="map_settings_add_oma_riista_area">Oma riista -alue</string>
    <string name="map_settings_add_pienriista">Metsähallitus pienriista</string>
    <string name="map_settings_add_hirvialue">Metsähallitus hirvi</string>
    <string name="map_settings_general_title">Yleiset</string>
    <string name="map_club_areas_title">Valitut alueet</string>
    <string name="instructions_title_antlers_length">Sarvipuoliskon pituus</string>
    <string name="instructions_title_antlers_girth">Tyven ympärysmitta</string>
    <string name="instructions_title_antlers_inner_width">Sarvien sisäleveys</string>
    <string name="instructions_antlers_length">Sarvipuoliskon pituus sarven tyvestä sarven kärkeen ulkosyrjää pitkin.</string>
    <string name="instructions_antlers_girth">Sarven tyven ympärys ohuimmasta kohdasta sarviruusukkeen ja ensimmäisen piikin välillä.</string>
    <string name="instructions_antlers_inner_width">Sarvien sisäleveys sarvien leveimmästä kohdasta.</string>
    <string name="group_hunting_diary_filter_dialog_title">Suodata</string>
    <string name="group_hunting_diary_filter_event_type_all">Saaliit ja havainnot</string>
    <string name="group_hunting_diary_filter_event_type_harvests">Saaliit</string>
    <string name="group_hunting_diary_filter_event_type_observations">Havainnot</string>
    <string name="group_hunting_diary_filter_accept_type_all">Kaikki</string>
    <string name="group_hunting_diary_filter_accept_type_accepted">Hyväksytyt</string>
    <string name="group_hunting_diary_filter_accept_type_rejected">Hylätyt</string>
    <string name="group_hunting_diary_filter_accept_type_proposed">Ehdotetut</string>
</resources>