<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.login.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/reset_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/login_area_color"
            android:orientation="vertical"
            android:paddingLeft="@dimen/page_padding_vertical"
            android:paddingRight="@dimen/page_padding_vertical">

            <TextView
                style="@style/LoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:text="@string/send_password_reset_title" />

            <TextView
                style="@style/LoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:text="@string/send_password_reset_message" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restore_email_address"
                style="@style/LoginTextInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_height"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_restore_email"
                style="@style/LoginPrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:text="@string/send_password_reset_action" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_return_to_login1"
                style="@style/LoginSecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:layout_marginBottom="@dimen/page_padding_vertical"
                android:text="@string/cancel" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_reset_requested_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/login_area_color"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="gone">

            <TextView
                style="@style/LoginTitle"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_link_sent_title" />

            <TextView
                style="@style/LoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:text="@string/password_reset_sent_message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_return_to_login2"
                style="@style/LoginPrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/page_padding_vertical"
                android:layout_marginBottom="@dimen/page_padding_vertical"
                android:text="@string/authentication_link_sent_back_to_login" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
